<resources>
    <string name="app_name">Warn</string>
    <string name="login"> log in</string>
    <string name="register">register</string>
    <string name="key_get">get the verification code</string>
    <string name="home_text">intelligent burglar alarm</string>
    <string name="sure">confirm</string>
    <string name="devices">it is empty, please add equipment</string>
    <string name="link_next">next step</string>
    <string name="link_cancle">cancel</string>
    <string name="link_reconnection">reconnect</string>
    <string name="link_devices_text">device is in connecting</string>
    <string name="link_deviced_text">reset smart devices or check routers and cellular</string>
    <string name="link_wifi_text">please select the connection network</string>
    <string name="my_devices_text">burglar alarm</string>
    <string name="my_devices_btn">unbound</string>
    <string name="scan_text">put QR code into the box and will scan automatically</string>
    <string name="scan_title">QR code/add device QR</string>
    <string name="personal_quit">log out</string>
    <string name="personal_name">nickname</string>
    <string name="my_devices_dialog_text2">please enter the correct number of host</string>
    <string name="my_devices_dialog_text1">bind host number</string>
    <string name="Please_select_a_network_connection">please select the connection network</string>
    <string name="The_next_step">next step</string>
    <string name="connection_WiFi">connected wi-fi</string>
    <string name="title_activity_about">About</string>
    <string name="Intelligent_burglar_alarm">intelligent burglar alarm</string>
    <string name="The_current_version">current version</string>
    <string name="file_provider">com.pgyersdk.provider</string>
    <string name="login_number_message">please enter the correct mobile number</string>
    <string name="login_password_message">please enter 6-20 password</string>
    <string name="forgot_password">forget password</string>
    <!--homeActivity-->
    <string name="Please_check_whether_the_account_password_is_correct">please check whether the account and password are correct</string>
    <string name="No_Internet_connection">no Internet connection, pleae try again later</string>
    <string name="Registration_failed">failed registration</string>
    <!--mydervice-->
    <string name="my_dervice">my device</string>
    <string name="ok">set up the success</string>
    <string name="no">setup failed</string>
    <string name="errer">abnormal data</string>
    <string name="edit_ok">modify the success</string>
    <string name="edit_no">modify the failure</string>
    <string name="Bind_host_number">bind host number</string>
    <string name="Heavy_binding">rebinding</string>
    <string name="re_name">rename</string>
    <string name="delete">delete</string>
    <string name="bind_sure">binding success</string>
    <string name="rebind_number">modify the binding device number</string>
    <string name="redervice_name">modify equipment name</string>
    <string name="code_add_device">QR code/add device QR</string>
    <string name="Connected_devices">connecting equipment</string>
    <string name="protection">arming</string>
    <string name="removal">disarming</string>
    <string name="behind_protection">left for arming</string>
    <string name="Play_set">defence area setting</string>
    <string name="no_data">......no more latest data</string>
    <string name="welcome">welcome</string>
    <string name="old_man">the aged</string>
    <string name="Common_defense_old">common defense</string>
    <string name="behind">stay to guard</string>
    <string name="smart">intelligent</string>
    <string name="Delay_time_of_cloth_defense">delay the time in defense</string>
    <string name="Delayed_alarm_time">delayed alarm time</string>
    <string name="help">help</string>
    <string name="about">about</string>
    <string name="Personal_Settings">personal settings</string>
    <string name="Do_not_use">The SD card is not available</string>
    <string name="Fill_in_the_username">fill the user name</string>
    <string name="re_dervice_name">rename</string>
    <string name="Slipproperties">anti-zone properties</string>
    <string name="outTime_protection">delay in defense</string>
    <string name="Delayed_alarm">delayed alarm</string>
    <string name="set_number">number setting</string>
    <string name="ed_baojing_pass">please enter the alarm passward</string>
    <string name="set_CID_number">setting CID number</string>
    <string name="baojing_number">answer number for alarm</string>
    <string name="baojing_password">passward for alram</string>
    <string name="Networking_center_number">Internet central number</string>
    <string name="CIDnumber">CID number</string>
    <string name="Enter_the_contact_number">enter Internet central number</string>
    <string name="rethe_contact_number">modify Internet central number</string>
    <string name="to_contact_number">enter the contact number</string>
    <string name="toRE_contact_number">modify the contact number</string>
    <string name="ed_jiejing_duanxin">enter the contact message number</string>
    <string name="re_jiejing_duanxin">modify the contact message number</string>
    <string name="setmsg">message setting</string>
    <string name="setnumber">number setting</string>
    <string name="setfangqu">anti-zone settings</string>
    <string name="have_send">sent</string>
    <string name="to_re">forget passward/reset passward</string>
    <string name="now_new">it is the latest version</string>
    <string name="to_anzhuang">download completion, jump to installation interface</string>
    <string name="xia_yichang">download address exception</string>
    <string name="xia">......downloading</string>
    <string name="to_start">start to download</string>
    <string name="to_exit">log out or not</string>
    <string name="duanwang">the network has been disconnected, please reconnected</string>
    <string name="tishi">please check the security of account, because your account is logged in to other device. Is the account operated by yourself? Otherwise, please change the passwork timely. Do you log in again?</string>
    <string name="exit">Press the exit procedure again.</string>
    <string name="log_out">Forced offline</string>
    <string name="lock_dervice">Find equipment</string>
    <string name="time_out">timeout</string>
    <string name="connect_true">Distribution network to complete</string>
    <string name="Emergency_protection_zones">Emergency protection zones</string>
    <string name="Close_play">defence area close</string>
    <string name="The_doorbell_play">defence doorbell</string>
    <string name="host_time">The host of time</string>
    <string name="Fixed_protection_time">Time cloth removal</string>
    <string name="Monday">On Monday,</string>
    <string name="Tuesday">On Tuesday,</string>
    <string name="Wednesday">On Wednesday,</string>
    <string name="Thursday">On Thursday,</string>
    <string name="Friday">On Friday,</string>
    <string name="Saturday">On Saturday,</string>
    <string name="Sunday">On Sunday,</string>
    <string name="bu_time">Deployment time:</string>
    <string name="ce_time">Time machine:</string>
    <string name="title_msg">Repeat | weekly</string>
    <string name="year">year</string>
    <string name="mont">month</string>
    <string name="day">day</string>
    <string name="hour">hour</string>
    <string name="minute">Minute</string>
    <string name="Please_select_the_time">Please select time</string>
    <string name="defence_area">Zone</string>
    <string name="setTime">Set the time </string>
    <string name="refresh">Pull down can refresh</string>
    <string name="The_dropdown_can_refresh">Pull down can refresh</string>
    <string name="Refresh">Refreshing...</string>
    <string name="Being_loaded">loading...</string>
    <string name="Release_instant_refresh">Release immediate refresh</string>
    <string name="Refresh_complete">Refresh completed</string>
    <string name="Refresh_failure">Refresh failed</string>
    <string name="The_last_update">Refresh filed</string>
    <string name="Reset_account_password">Reset account password</string>
    <string name="Head_portrait">Avatar</string>
    <string name="ed_wif">Please enter a Wi-Fi password</string>
    <string name="Whether_the_horns">Whether to whistle：</string>
    <string name="Forced_offline">Forced offline</string>
    <string name="exit_login">sign out</string>
    <string name="exit_login_msg">Do you need to log out</string>
    <string name="Language_switching">Language switching</string>
    <string name="simplified_chinese_text">Simplified Chinese</string>
    <string name="english_text">English</string>
    <string name="japanese_language_text">Russian</string>
    <string name="japanese_text">Russian</string>
    <string name="no_browse">No browser tools installed</string>
    <string name="mingdi">Long press to cancel the alarm</string>
    <string name="jiechutixing">Reminder</string>
    <string name="jiechutixing_MSG">Will release the alarm, whether to release the voice reminder of this device？</string>
    <string name="jiechu">Release</string>
    <string name="HULVE">ignore</string>


    <string name="Someone_broke_into">Someone broke into</string>


</resources>
