<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/alarm_bg"
    >


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_text"
        android:textSize="15dp"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:gravity="center"
        />

    <LinearLayout
        android:id="@+id/llt_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/alarm_bg"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_below="@+id/header_all"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">






        <LinearLayout
            android:id="@+id/llt_buf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginTop="48dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_buf_selector"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:duplicateParentState="true"
                android:text="@string/protection"
                android:textColor="@color/alarm_btn_selector"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_cf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="48dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_cf_selector"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:duplicateParentState="true"
                android:text="@string/removal"
                android:textColor="@color/alarm_btn_selector"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_lsf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_marginLeft="38dp"
            android:layout_marginTop="48dp"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/alarm_lsf_selector"
                android:duplicateParentState="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:duplicateParentState="true"
                android:text="@string/behind_protection"
                android:textColor="@color/alarm_btn_selector"
                android:textSize="12sp" />
        </LinearLayout>
        </LinearLayout>

</LinearLayout>