<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">



    <LinearLayout
        android:layout_width="260dp"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_shape_bg"
        >



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Slipproperties"
            android:textSize="15dp"
            android:textColor="#242424"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@drawable/bg_qie"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal"
            >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/right"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"
                />



            <com.saiyi.ui.view.PickerView
                android:id="@+id/pivews"
                android:layout_width="match_parent"
                android:background="#ffffff"
                android:layout_height="match_parent"
                android:layout_weight="1"
                >

            </com.saiyi.ui.view.PickerView>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/left"
                android:layout_marginRight="5dp"
                android:layout_gravity="center_vertical"
                />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Whether_the_horns"
                android:gravity="center_vertical"
                android:layout_centerVertical="true"
                />


            <ImageView
                android:id="@+id/tv_mingdi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ming"
                android:layout_alignParentRight="true"
                />

        </RelativeLayout>





        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#CDCDCD"
            ></View>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_no_oo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:text="@string/link_cancle"
                android:background="@null"
                android:textColor="#0176FF"
                android:gravity="center"
                />

            <View
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:background="#CDCDCD"
                ></View>

            <Button
                android:id="@+id/btn_yes_oo"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/sure"
                android:textColor="#0176FF"

                />

        </LinearLayout>



    </LinearLayout>

</LinearLayout>
