<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <RelativeLayout
        android:id="@+id/outTime_protection"
        android:layout_width="match_parent"
        android:layout_height="44dp" >

        <TextView
            android:drawableLeft="@drawable/set_lock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/outTime_protection"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:textColor="#4f5154"
            android:textSize="14sp" />

        <ImageView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/input" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />

    <RelativeLayout
        android:id="@+id/Delayed_alarm"
        android:layout_width="match_parent"
        android:layout_height="44dp" >

        <TextView
            android:drawableLeft="@drawable/set_rename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/Delayed_alarm"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:textColor="#4f5154"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/input" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />


    <RelativeLayout
        android:id="@+id/host_time"
        android:layout_width="match_parent"
        android:layout_height="44dp" >

        <TextView
            android:drawableLeft="@drawable/host"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:text="@string/host_time"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textColor="#4f5154"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/input" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />
    <RelativeLayout
        android:id="@+id/Fixed_protection_time"
        android:layout_width="match_parent"
        android:layout_height="44dp" >

        <TextView
            android:drawableLeft="@drawable/bu_ce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/Fixed_protection_time"
            android:gravity="center"
            android:drawablePadding="10dp"
            android:textColor="#4f5154"
            android:textSize="14sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:src="@drawable/input" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#f0f0f0" />



</LinearLayout>
